2009-10-20  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor packaging fix.
	
	* lib/seqc.mk (CLEANFILES), 
	* lib/ptl.mk (CLEANFILES): Mention `perf.o'.

2009-10-16  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix `slr' breakage.
	
	* tools/bin/sag: Fix order in which `slr' variables from program
	are considered.

2009-10-15  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix `slr -g' with simulator.
	
	* tools/lib/r-mtalpha-sim.sh.in (DEBUGGER),
	* tools/lib/r-mtsparc-sim.sh.in (DEBUGGER): Fix typo (do not use
	`.gfx' by default when debugging).

2009-10-15  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Reflect latest binutils changes. (cont.)
	
	* tools/lib/mtalpha-sim/slrt.s (_start),	
	* tools/lib/mtalpha-sim/callgate.s (__sl_callgate): Move
	`.registers' to before the label.

2009-10-15  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Reflect latest binutils changes.

	* tools/bin/spp (pppalpha.xjoin2): Emit the `.registers' directive
	before the function label. This is required because the register
	word should happen before the first instruction in the output and
	assembler does not reorder them anymore.

2009-10-15  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Increase portability of the `seqc' and `ptl' targets.

	On some systems, it is needed to link with `-lm' to get access to
	math functions.
	
	* build-aux/slc.m4: Check whether `-lm' is needed to use math on
	the host C/C++.
	
	* build-aux/sl.mk: Use $(LIBS) for the host system.

2009-10-14  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Allow multiple uses of `slr_decl' in the same translation unit.

	* tools/include/svp/slr.h: Support multiple uses of `slr_decl'.
	
	* tools/bin/sag: Sort variables according to the order specified
	in the source.

2009-10-13  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	ABI change: special memory now at the start of the address space.
	
	* lib/include/svp/perf.h: Counters now start at address +4 from
	the start of the address space, instead of -256 from the end.
	