@@ -27,16 +27,16 @@
   })
 
 [[#]]define __sl_setshp(Name, Value)					\
-  ({									\
-     __asm__ __volatile__("# MT: start write shared " # Name " (%1) <- (and clobber incoming %0)" \
- 			 : /* ensure incoming shared is marked clobbered */ \
-			   "=rf" (__sl_shparm_in_ ## Name), "=rf"(__sl_shparm_out_ ## Name) \
-			  : "0"(__sl_shparm_in_ ## Name), "1"(__sl_shparm_out_ ## Name)); \
-    __sl_shparm_out_ ## Name = (Value);					\
-    __asm__ __volatile__("# MT: end write shared " # Name " (%0)"	\
-			 : "=rf" (__sl_shparm_out_ ## Name), "=rf" (__sl_shparm_in_ ## Name) \
-			 : "0"(__sl_shparm_out_ ## Name), "1" (__sl_shparm_in_ ## Name)); \
-  })
+({ __typeof__(Value) __tmp_set_ ## Name = (Value);			\
+  __asm__ __volatile__("# MT: start write shared " # Name " (%1) <- (and clobber incoming %0)" \
+		       : /* ensure incoming shared is marked clobbered */ \
+		       "=rf" (__sl_shparm_in_ ## Name), "=rf"(__sl_shparm_out_ ## Name) \
+		       : "0"(__sl_shparm_in_ ## Name), "1"(__sl_shparm_out_ ## Name)); \
+  __sl_shparm_out_ ## Name = __tmp_set_ ## Name;			\
+  __asm__ __volatile__("# MT: end write shared " # Name " (%0)"		\
+		       : "=rf" (__sl_shparm_out_ ## Name), "=rf" (__sl_shparm_in_ ## Name) \
+		       : "0"(__sl_shparm_out_ ## Name), "1" (__sl_shparm_in_ ## Name)); \
+ })
 
 // [[#]]define __sl_setshp(Name, Value)					\
 //   ({									\
@@ -54,14 +54,15 @@
 
 [[#]]define __sl_getsha(Name) __sl_sharg_ ## Name
 [[#]]define __sl_setsha(Name, Val) do {				\
-    __asm__ __volatile__("# MT: writing shared " # Name " (%0)"	\
-			 : "=rf"(__sl_arg_ ## Name)		\
-			 : "0"(__sl_arg_ ## Name));		\
-    __sl_arg_ ## Name = (Val);				\
-    __asm__ __volatile__("# MT: shared " # Name " ready (%0)"	\
-			 : "=rf"(__sl_arg_ ## Name)		\
-			 : "0"(__sl_arg_ ## Name));		\
-  } while(0)
+  __typeof__(Val) __tmp_set_ ## Name = (Val);			\
+  __asm__ __volatile__("# MT: writing shared " # Name " (%0)"	\
+		       : "=rf"(__sl_arg_ ## Name)		\
+		       : "0"(__sl_arg_ ## Name));		\
+  __sl_arg_ ## Name = __tmp_set_ ## Name;			\
+  __asm__ __volatile__("# MT: shared " # Name " ready (%0)"	\
+		       : "=rf"(__sl_arg_ ## Name)		\
+		       : "0"(__sl_arg_ ## Name));		\
+ } while(0)
 
 
 [[#]]define __sl_declindex(Name) register const long Name = __sl_index
